--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose --coverage",
+    "e2e": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,11 @@
   "homepage": "https://github.com/itsevalieu/ctt-hackathon#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "cypress": "^8.3.0"
   }
 }
