--- a/app/package.json
+++ b/app/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@cypress/react": "^5.9.4",
     "@cypress/webpack-dev-server": "^1.4.0",
+    "@types/styled-components": "^5.1.14",
     "cypress": "^8.3.0",
     "html-webpack-plugin": "^4.5.2"
   }
